// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomSwitch should render correctly with an error label 1`] = `
<div>
  <div
    class="MuiFormGroup-root rows css-1mac7pt-MuiFormGroup-root"
  >
    <div
      class="columns"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 color-disabled margin-right-xs css-rizt0-MuiTypography-root"
      >
        leftLabel
      </p>
      <label
        class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd custom-switch__label css-19opgx6-MuiFormControlLabel-root"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
        >
          <span
            aria-disabled="true"
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSecondary Mui-checked Mui-disabled Mui-disabled PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorSecondary Mui-checked Mui-disabled Mui-checked Mui-disabled css-zp7cnf-MuiButtonBase-root-MuiSwitch-switchBase"
            data-testid="just-a-test-id"
            tabindex="-1"
          >
            <input
              checked=""
              class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
              disabled=""
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
          />
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-rizt0-MuiTypography-root"
        >
          rightLabel
        </span>
      </label>
    </div>
    <span
      class="MuiTypography-root MuiTypography-caption custom-switch__helper-text css-8gz0an-MuiTypography-root"
      data-testid="just-a-test-id__error-label"
    >
      test-error-label
    </span>
  </div>
</div>
`;

exports[`CustomSwitch should render correctly with just the minimal props 1`] = `
<div>
  <div
    class="MuiFormGroup-root rows css-1mac7pt-MuiFormGroup-root"
  >
    <div
      class="columns"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 margin-right-xs css-rizt0-MuiTypography-root"
      >
        anotherLeftLabel
      </p>
      <label
        class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd custom-switch__label css-19opgx6-MuiFormControlLabel-root"
      >
        <span
          class="MuiSwitch-root MuiSwitch-sizeMedium css-rehya9-MuiSwitch-root"
        >
          <span
            class="MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorSecondary PrivateSwitchBase-root MuiSwitch-switchBase MuiSwitch-colorSecondary css-zp7cnf-MuiButtonBase-root-MuiSwitch-switchBase"
          >
            <input
              class="PrivateSwitchBase-input MuiSwitch-input css-j8yymo"
              type="checkbox"
            />
            <span
              class="MuiSwitch-thumb css-17jyosd-MuiSwitch-thumb"
            />
          </span>
          <span
            class="MuiSwitch-track css-tj8d99-MuiSwitch-track"
          />
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-rizt0-MuiTypography-root"
        >
          anotherRightLabel
        </span>
      </label>
    </div>
  </div>
</div>
`;
